# esp-clock-sync

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/clock-sync/: Cargo.toml
crates/clock-sync-client/: Cargo.toml
crates/clock-sync-client/.cargo/: config.toml
crates/clock-sync-client/src/: lib.rs
crates/clock-sync-firmware/: Cargo.toml
crates/clock-sync-firmware/src/: main.rs
crates/clock-sync-server/: Cargo.toml
crates/clock-sync-server/src/: main.rs
crates/clock-sync-test/: Cargo.toml
crates/clock-sync-test/src/: main.rs  mcpwm_cap.rs
crates/clock-sync/src/: lib.rs
crates/skew-meter/: Cargo.toml
crates/skew-meter/src/: main.rs
nix/: devshell.nix
scripts/: drive_test_esp.py
