[package]
name = "clock-sync-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "ESP32 (esp-radio) bindings for the clock-sync system."

[dependencies]
clock-sync = { workspace = true, default-features = false }

embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }

esp-hal = { workspace = true }
esp-radio = { workspace = true }
esp-wifi-sys = { version = "0.8", default-features = false }
critical-section = { workspace = true }
static_cell = { workspace = true }
log = { workspace = true }
portable-atomic = { version = "1", features = ["critical-section"] }

[features]
default = []
esp32   = ["esp-hal/esp32",   "esp-radio/esp32",   "esp-wifi-sys/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-radio/esp32c2", "esp-wifi-sys/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-radio/esp32c3", "esp-wifi-sys/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-radio/esp32c6", "esp-wifi-sys/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-radio/esp32h2", "esp-wifi-sys/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-radio/esp32s2", "esp-wifi-sys/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-radio/esp32s3", "esp-wifi-sys/esp32s3"]

[lib]
test = false
doctest = false
bench = false
