[package]
name = "skew-meter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Reads two ESP serial streams and reports inter-board sync error."

[dependencies]
clap = { workspace = true }
serialport = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = "0.11"

[[bin]]
name = "skew-meter"
path = "src/main.rs"
test = false
doctest = false
bench = false
